# BitHardened

./: .gitignore  README.md  pyproject.toml  setup.sh  vars.yml.example
playbooks/: 00_hardening.yml  01_setup-ca.yml  02_app-setup.yml
templates/: 99-hardening.conf.j2  Caddyfile.j2  auditd.rules.j2  ca.conf.j2  docker-compose.yml.j2  generate_user_cert.sh.j2
