[project]
name = "BitHardened"
version = "0.1.0"
description = "An Ansible automation suite for deploying Vaultwarden password manager on hardened Ubuntu servers with mutual TLS (mTLS) authentication."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.9.0",
    "bitwarden-sdk>=1.0.0",
]
